# PyExner

./: .gitignore  LICENSE  README.md  pyproject.toml
PyExner/: __init__.py
PyExner/domain/: boundary_registry.py  mesh.py
PyExner/domain/boundaries/: __init__.py  roe_transmissive.py
PyExner/integrators/: base.py  forwardeuler.py  registry.py
PyExner/io/: pnetcdf_reader.py
PyExner/parallel/: __init__.py  mpi_utils.py
PyExner/runtime/: driver.py
PyExner/solvers/: base.py  registry.py  roe_solver.py
PyExner/solvers/kernels/: __init__.py  roe.py
PyExner/state/: __init__.py  base.py  registry.py  roe_state.py
machines/: juwels.gpu
scripts/: juwels_install.sh
src/PyExner/: __init__.py
src/PyExner/domain/: __init__.py  boundary_registry.py  mesh.py
src/PyExner/integrators/: SSPRK2.py  __init__.py  base.py  forwardeuler.py  registry.py
src/PyExner/io/: pnetcdf_reader.py
src/PyExner/parallel/: mpi_utils.py
src/PyExner/runtime/: driver.py
src/PyExner/solvers/: __init__.py  base.py  registry.py  roe_exner_solver.py  roe_solver.py
src/PyExner/state/: __init__.py  base.py  registry.py  roe_exner_state.py  roe_state.py
src/PyExner/utils/: constants.py  utils.py
tests/domain/: test_mesh.py
tests/runtime/: build_dambreak_input.py  dambreak.py  distributed.slurm  elapsed_times.txt  get_times.sh  scaling_figures.py
tests/runtime/1D_dambreak/: build_dambreak_input.py  dambreak.py  distributed.slurm
tests/runtime/2D_const_flow/: 2D_build_num_sol.py  input.yaml
tests/runtime/2D_const_flux/: 2D_build_num_sol.py  analyze_convergence.py  (+2 more)
(+297 files in other folders)
