[project]
name = "PyExner"
version = "0.1.0"
description = "High-performance 2D SWE–Exner solver with JAX and distributed GPU support"
authors = [
    {name = "Johansell Villalobos", email = "johansellvilla@gmail.com"}
]
license = {text = "BSD 3"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
]
cpu = ["jax[cpu]>=0.4.20"]
cuda12 = ["jax[cuda12]>=0.5.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]